--- a/features-template.html
+++ b/features-template.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Name</title>
+    <title>landing-page</title>
 </head>
 <body>
-    <h2>Name of Feature</h2>
+    <h2>landing-page</h2>
     <hr>
-    <p>Description of feature</p>
+    <p>Page for advertising and marketing</p>
 
     <br>
     <br>
