--- a/features-template.html
+++ b/features-template.html
@@ -8,7 +8,7 @@
 <body>
     <h2>landing-page</h2>
     <hr>
-    <p>Page for advertising and marketing</p>
+    <p>For advertising and merketing</p>
 
     <br>
     <br>
