attempting to merge commit history

--- a/contact_us.html
+++ b/contact_us.html
@@ -6,7 +6,7 @@
     <title>Page Name</title>
 </head>
 <body>
-    <h2>Contact Us</h2>
+    <h2>Contact Us!</h2>
     <hr>
     <p>Please contact us by calling 1-800-slimprep. Or by sending an email to olakunle@slimprep.com</p>
 
