added image and links

--- a/index.html
+++ b/index.html
@@ -6,10 +6,34 @@
     <title>Local App</title>
 </head>
 <body>
-    <h1>Local App Dir</h1>
+    <br>
+    <br>
+    <img src="home.png" width="400px"  alt="">
+    <h1>House Tour App</h1>
     <br>
     <hr>
     <br>
-    <a href="features-template.html" class="">Features Template</a>
+    <a href="features-template.html" class="">view-catalog</a><br>
+    <a href="features-template.html" class="">book-session</a><br>
+    <a href="features-template.html" class="">nearby-houses</a><br>
+    <a href="features-template.html" class="">contact us</a><br>
+    <a href="features-template.html" class="">get-quote</a><br>
+    <a href="features-template.html" class="">map</a><br>
+    <a href="features-template.html" class="">search</a><br>
+    <a href="features-template.html" class="">shared-apartment</a><br>
+    <a href="features-template.html" class="">home</a><br>
+    <a href="features-template.html" class="">login</a><br>
+    <a href="features-template.html" class="">register</a><br>
+    
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
