created login feature

--- a/index.html
+++ b/index.html
@@ -22,18 +22,9 @@
     <a href="features-template.html" class="">search</a><br>
     <a href="features-template.html" class="">shared-apartment</a><br>
     <a href="features-template.html" class="">home</a><br>
-    <a href="features-template.html" class="">login</a><br>
+    <a href="login.html" class="">login</a><br>
     <a href="features-template.html" class="">register</a><br>
     
-
-
-
-
-
-
-
-
-
 
 </body>
 </html>
