--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <hr>
     <br>
     <a href="features-template.html" class="">view-catalog</a><br>
-    <a href="features-template.html" class="">book-session</a><br>
+    <a href="book-session.html" class="">book-session</a><br>
     <a href="features-template.html" class="">nearby-houses</a><br>
     <a href="features-template.html" class="">contact us</a><br>
     <a href="features-template.html" class="">get-quote</a><br>
@@ -37,3 +37,4 @@
 
 </body>
 </html>
+
