added search image

--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
 <body>
     <br>
     <br>
-    <img src="home.png" width="400px"  alt="">
+    <img src="great-search-engines-612f8f78d1f79-sej.webp" width="400px"  alt="">
     <h1>Search</h1>
     <br>
     <hr>
