image added  map_tour

--- a/map.html
+++ b/map.html
@@ -8,7 +8,7 @@
 <body>
     <br>
     <br>
-    <img src="home.png" width="400px"  alt="">
+    <img src="https://en.m.wikipedia.org/wiki/File:Google_Maps_icon_(2015-2020).svg" width="400px"  alt="">
     <h1>Map</h1>
     <br>
     <hr>
