--- a/contact-us.html
+++ b/contact-us.html
@@ -8,7 +8,7 @@
 <body>
     <br>
     <br>
-    <img src="home.png" width="400px"  alt="">
+    <img src="contact-us" width="400px"  alt="">
     <h1>contactus</h1>
     <br>
     <hr>
