--- a/nearby-houses.html
+++ b/nearby-houses.html
@@ -8,8 +8,8 @@
 <body>
     <br>
     <br>
-    <img src="login.png" width="400px"  alt="">
-    <h1>Login</h1>
+    <img src="nearby.jpg" width="400px"  alt="">
+    <h1>Nearby Houses</h1>
     <br>
     <hr>
     <br>
