--- a/register.html
+++ b/register.html
@@ -8,8 +8,8 @@
 <body>
     <br>
     <br>
-    <img src="login.png" width="400px"  alt="">
-    <h1>Login</h1>
+    <img src="register.png" width="400px"  alt="">
+    <h1>register</h1>
     <br>
     <hr>
     <br>
