--- a/shared-apartment.html
+++ b/shared-apartment.html
@@ -8,8 +8,8 @@
 <body>
     <br>
     <br>
-    <img src="login.png" width="400px"  alt="">
-    <h1>Login</h1>
+    <img src="shared.jpeg" width="400px"  alt="">
+    <h1>Shared Apartments</h1>
     <br>
     <hr>
     <br>
