--- a/view-catalog.html
+++ b/view-catalog.html
@@ -8,8 +8,8 @@
 <body>
     <br>
     <br>
-    <img src="login.png" width="400px"  alt="">
-    <h1>Login</h1>
+    <img src="catalog.jpeg" width="400px"  alt="">
+    <h1>View Catalog</h1>
     <br>
     <hr>
     <br>
