--- a/get-quote.html
+++ b/get-quote.html
@@ -8,7 +8,7 @@
 <body>
     <br>
     <br>
-    <img src="home.png" width="400px"  alt="">
+    <img src="get-quote.jpg" width="400px"  alt="">
     <h1>Get Quote</h1>
     <br>
     <hr>
