--- a/book-session.html
+++ b/book-session.html
@@ -8,7 +8,7 @@
 <body>
     <br>
     <br>
-    <img src="c:\Users\AladeOluwaseun\Downloads\book section.jpeg" width="400px"  alt="">
+    <img src="book-section.jpeg" width="400px"  alt="">
     <h1>Book-Session</h1>
     <br>
     <hr>
