new feature faq

--- a/faq.html
+++ b/faq.html
@@ -8,8 +8,8 @@
 <body>
     <br>
     <br>
-    <img src="home.png" width="400px"  alt="">
-    <h1>House Tour App</h1>
+    <img src="faq.jpeg" width="400px"  alt="">
+    <h1>FAQ</h1>
     <br>
     <hr>
     <br>
@@ -25,7 +25,6 @@
     <a href="login.html" class="">login</a><br>
     <a href="register.html" class="">register</a><br>
     <a href="faq.html" class="">FAQ</a><br>
-    
 
 </body>
 </html>
