--- a/map.html
+++ b/map.html
@@ -8,7 +8,7 @@
 <body>
     <br>
     <br>
-    <img src="https://en.m.wikipedia.org/wiki/File:Google_Maps_icon_(2015-2020).svg" width="400px"  alt="">
+    <img src="'google-maps.jpg" width="400px"  alt="">
     <h1>Map</h1>
     <br>
     <hr>
@@ -18,7 +18,7 @@
     <a href="nearby-houses.html" class="">nearby-houses</a><br>
     <a href="contact-us.html" class="">contact-us</a><br>
     <a href="get-quote.html" class="">get-quote</a><br>
-    <a href="map.html" class="">map</a><br>
+    <a href=map.html" class="">map</a><br>
     <a href="search.html" class="">search</a><br>
     <a href="shared-apartment.html" class="">shared-apartment</a><br>
     <a href="index.html" class="">home</a><br>
@@ -26,7 +26,7 @@
     <a href="register.html" class="">register</a><br>
     
 
-
+"
 
 
 
