--- a/map.html
+++ b/map.html
@@ -8,7 +8,7 @@
 <body>
     <br>
     <br>
-    <img src="'google-maps.jpg" width="400px"  alt="">
+    <img src="google-maps.jpg" width="400px"  alt="">
     <h1>Map</h1>
     <br>
     <hr>
@@ -26,7 +26,7 @@
     <a href="register.html" class="">register</a><br>
     
 
-"
+
 
 
 
