added image and link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <br>
     <br>
     <img src="home.png" width="400px"  alt="">
-    <h1>House Tour App</h1>
+    <h1>House tour app</h1>
     <br>
     <hr>
     <br>
@@ -25,6 +25,10 @@
     <a href="login.html" class="">login</a><br>
     <a href="register.html" class="">register</a><br>
     <a href="faq.html" class="">FAQ</a><br>
+    <a href="black-friday.html" class="">black-friday</a><br>
+    <a href="bus-station.html" class="">bus-station</a><br>
+
+
     
 
 </body>
