tour_black-friday

--- a/bus-station.html
+++ b/bus-station.html
@@ -9,7 +9,7 @@
     <br>
     <br>
     <img src="home.png" width="400px"  alt="">
-    <h1>House tour app</h1>
+    <h1>bus-station</h1>
     <br>
     <hr>
     <br>
