--- a/login.html
+++ b/login.html
@@ -24,16 +24,8 @@
     <a href="index.html" class="">home</a><br>
     <a href="login.html" class="">login</a><br>
     <a href="register.html" class="">register</a><br>
+    <a href="black-friday.html" class="">black-friday</a><br>
+    <a href="bus-station.html" class="">bus-station</a><br
     
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
